[package]
name = "flua-src"
version = "1.1.0+factorio-2.0.46"
authors = ["fgardt <me@fgardt.dev>"]
edition = "2021"
repository = "https://github.com/fgardt/flua-src-rs"
keywords = ["lua", "flua", "factorio"]
license = "MIT"
description = """
Sources of Factorios Lua and logic to build them.
"""

[workspace]
members = ["testcrate"]

[dependencies]
cc = "1.2"
